quick_tests/cases/pass/p305_function_call_with_typed_params_and_shadowing.webx
fn main() -> i32 { let x: i32 = 5; let y: i32 = 10; fn add(a: i32, b: i32) -> i32 { return a + b; } println(add(x, y)); return 0; }