quick_tests/cases/fail/f08_missing_return_type_arrow.webx
fn add(a: i32, b: i32) ->  { return a + b; } fn main() -> i32 { let result: i32 = add(2, 3); println(result); return 0; }